# eduardoalarcon

./: .env.example  .gitignore  .htaccess  404.html  PROJECT_OVERVIEW.md  README.md  automatizaciones.html  blog-post-1.html  blog-post-3.html  blog-post-4.html  blog-post-5.html  blog-post-6.html  blog-post.html  blog.html  blog_post_1.html  blog_post_2.html  blog_post_3.html  blog_post_4.html  consultoria.html  contacto.html  docker-compose.yml  faq.html  finanzas.html  herramientas-ia.html  index.html  nosotros.html  package.json  precalificacion-evaluacion.html  precios.html  prueba-gratis.html  quienes-somos.html  robots.txt  servicios.html  sitemap.xml  styles.css  tailwind.config.ts  tsconfig.json  visionassist-7dias.html
app/: globals.css  (+4 more)
shock-alpha/: .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  Makefile  PLANS.md  README.md  docker-compose.yml  package.json  pyproject.toml  server.js
shock-alpha/app/: config.py  main.py  schemas.py
shock-alpha/app/api/: routes.py
shock-alpha/app/services/: backtest.py  market.py  models.py  shocks.py  storage.py  trading.py
shock-alpha/config/: default.yaml  sources.yaml  tickers.yaml
shock-alpha/docs/: data_sources.md  methodology.md  risk_disclaimer.md
shock-alpha/frontend/: app.js  index.html  styles.css
shock-alpha/hostinger/public_html/: .htaccess  README_UPLOAD.txt  index.html
shock-alpha/public/: app.js  index.html  styles.css
shock-alpha/shockalpha/: __init__.py  cli.py  run.py  settings.py
shock-alpha/tests/: test_backtest.py  test_fibonacci.py  test_leakage.py  test_shock_index.py
(+235 files in other folders)
